sorted/tests/22-pattern-bool-literal.stderr
error: false should sort before true
 --> tests/22-pattern-bool-literal.rs:9:9
  |
9 |         false => println!("false"),
  |         ^^^^^
